# wordle_Gu_Kejia

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordle_kg3222/: __init__.py  wordle_kg3222.py
tests/: test_wordle_kg3222.py
