[tool.poetry]
name = "wordle_kg3222"
version = "0.1.0"
description = "This package is designed for playing Wordle Game!"
authors = ["Kejia Gu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "myst-nb (>=1.3.0,<2.0.0)",
    "sphinx-autoapi (>=3.6.1,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "sphinx (>=8.2.3,<9.0.0)"
]
